# AgentHarness

./: .env.example  .gitignore  CLAUDE.md  MULTI_DEV_ISOLATION_DESIGN.md  Makefile  PRD.md  README.md  SPEC.md  batch_isolation_analysis.md  benchmark_build_fix_report.md  benchmark_e2e_checklist.md  benchmark_fixes_report.md  bubble_sort.py  check_llm.py  check_mcp.py  config_llm.py  conversation_isolation_fix.md  fibonacci.py  final_report_code_quality.md  final_report_python_vs_go.md  fix.patch  framework-overview.html  hello.py  hello_printer.py  install.py  main.py  package-lock.json  pyproject.toml
agents/: auth_design.md  chart_demo.md  coder.md  decision_maker.md  execution_plan.md  plan.md  researcher_a.md  researcher_b.md  synthesizer.md
backend/: main.py
docs/: test_plan.md  test_report.md
examples/: 01_minimal.py  01_quickstart.py  02_save_load.py  02_serial_pipeline.py  03_parallel.py  03_pipeline.py  04_chart_demo.py  04_conditional_routing.py  05_loop_retry.py  05_trace_demo.py  06_agent_to_ui.py  06_sub_agent_loop.py  07_ask_human.py  07_parallel.py  08_coder_review_loop.py  08_eval_judge.py  09_ask_human.py  09_charts.py  10_eval_judge.py  10_save_load_ui.py  11_all_extensions.py  12_benchmark.py  13_console_output.py  14_benchmark_prep.py  15_benchmark_prep_agent.py  16_codegraph_mcp.py  17_codegraph_full_tour.py  18_bitx_mxint_analysis.py  19_mxint_diagnostic.py  20_precision_diagnostic.py  21_claude_code_minimal.py  basic_agent.py  chart_demo.py  chart_script.py  full_flow.py  launch_ui.sh  real_workflow.py  trace_demo.py
frontend/: .gitignore  benchmark_utils.ts  benchmark_utils_v2.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
harness/: __init__.py  agent.py  api.py  benchmark.py  benchmark_store.py  checkpoint.py  cli.py  cli_bridge_tools.py  cli_runner.py  config.py  constants.py  cost.py  followup.py  paths.py  prep_executor.py  profiles.py  registry.py  run_store.py  run_store_interface.py  schema_utils.py  types.py  user_manager.py  workflow.py  workflow_persist.py  workflow_runtime.py
projects/: .gitignore
runs/: simple-nas-20260628-2302-ef24fd+iter_index.json  simple-nas-20260628-2302-ef24fd+iters+baseline+1.json  simple-nas-20260628-2302-ef24fd+iters+mutator_hyperparam+1.json  simple-nas-20260628-2302-ef24fd+iters+selector+1.json  simple-nas-20260628-2302-ef24fd+iters+setup+1.json  simple-nas-20260628-2302-ef24fd+outline.json  simple-nas-20260628-2302-ef24fd+snapshot.json  simple-nas-20260628-2302-ef24fd.json  simple-nas-20260628-2329-3eca32+iter_index.json  simple-nas-20260628-2329-3eca32+iters+setup+1.json  simple-nas-20260628-2329-3eca32+outline.json  simple-nas-20260628-2329-3eca32+snapshot.json  simple-nas-20260628-2329-3eca32.json  simple-nas-20260628-2335-3533db+charts.json  simple-nas-20260628-2335-3533db+iter_index.json  simple-nas-20260628-2335-3533db+iters+analyzer+1.json  simple-nas-20260628-2335-3533db+iters+analyzer+10.json  simple-nas-20260628-2335-3533db+iters+analyzer+11.json  simple-nas-20260628-2335-3533db+iters+analyzer+2.json  simple-nas-20260628-2335-3533db+iters+analyzer+3.json  simple-nas-20260628-2335-3533db+iters+analyzer+4.json  simple-nas-20260628-2335-3533db+iters+analyzer+5.json  simple-nas-20260628-2335-3533db+iters+analyzer+6.json  simple-nas-20260628-2335-3533db+iters+analyzer+7.json  simple-nas-20260628-2335-3533db+iters+analyzer+8.json  simple-nas-20260628-2335-3533db+iters+analyzer+9.json  simple-nas-20260628-2335-3533db+iters+baseline+1.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+1.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+10.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+11.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+2.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+3.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+4.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+5.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+6.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+7.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+8.json  simple-nas-20260628-2335-3533db+iters+mutator_hyperparam+9.json  simple-nas-20260628-2335-3533db+iters+mutator_sota+1.json  simple-nas-20260628-2335-3533db+iters+mutator_sota+10.json  (+36 more)
schemas/: README.md  iter_index.v2.schema.json  iter_sidecar.v2.schema.json  iter_sidecar.v3.schema.json  snapshot.v2.schema.json
scripts/: e2e_phase3_test.py  lint_runs.py  manage_users.py  migrate_runs_v1_to_v2.py  migrate_to_user_isolated.py  migrate_workflows_to_dirs.py  parse_tutorials.py  rebuild_orphan_conversations.py  record_cli_session.py
server/: _helpers.py  app.py  auth.py  batch_fan_in.py  dependencies.py  domain_routes.py  event_bus.py  repository.py  routes.py  runner.py  schemas.py  tutorial_parser.py  ws_handler.py
test_server_agents/: analyzer.md
tests/: capture_prompt_baseline.py  conftest.py  test_agent_crud.py  test_agent_executor_field.py  test_api.py  test_api_list_saved.py  test_benchmark_isolation.py  test_bus_critical_types.py  test_checkpoint.py  test_cli_noise_filter.py  (+38 more)
(+1370 files in other folders)
