[project]
name = "agent-harness"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.36",
    "langgraph>=0.2.0",
    "python-frontmatter>=1.0",
    # rich is imported unconditionally by harness/extensions/console.py and the
    # new harness/extensions/tui/* package, so it belongs in the main deps rather
    # than a misleading `[console]` extra. The historical extra is removed; the
    # `console` extra never actually worked without it on a fresh install.
    "rich>=13.0",
    # Exact tokenizer for tool-output token measurement (Pre/PostToolUse
    # audits, OutputCompactor thresholds). Falls back to a heuristic if the
    # import fails, so it is a soft dependency at runtime.
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness", "harness.*", "server", "server.*"]

[tool.setuptools.package-data]
harness = ["builtin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: tests that call real LLM APIs or MCP servers (deselected by default)",
]
addopts = "-m 'not slow'"
